--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DB_URI = 'mongodb+srv://outsider:ZTwQ3RWtHwbshIGG@cluster0.oipdvr8.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET = 'oVd9&WRnaDXqzLdZ&kSfzd@M8$mTBEvb998CBE6m6KPex%D#aQ'
