--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DB_URI = 'mongodb+srv://outsider:BHs5Uns0JwzBGwkb@cluster0.oipdvr8.mongodb.net/?retryWrites=true&w=majority'
+DB_URI = 'mongodb+srv://outsider:Z8xHcwHlOvm14vjB@cluster0.oipdvr8.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET = 'oVd9&WRnaDXqzLdZ&kSfzd@M8$mTBEvb998CBE6m6KPex%D#aQ'
