--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 DB_URI = 'mongodb+srv://outsider:Z8xHcwHlOvm14vjB@cluster0.oipdvr8.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET = 'oVd9&WRnaDXqzLdZ&kSfzd@M8$mTBEvb998CBE6m6KPex%D#aQ'
-HOST_URI = 'http://localhost:3000'
+HOST_URI = 'https://cakeshop.render.com'
